--- a/data-server/Dockerfile
+++ b/data-server/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:alpine
 
-WORKDIR /go/src/github.com/fcrisciani/data
+WORKDIR /go/src/github.com/fcrisciani/hack2018/data-server
 COPY . ./
 
 RUN mkdir -p /go/bin/
@@ -10,7 +10,7 @@ CMD ["ls", "/go/bin/"]
 
 FROM golang:alpine
 
-COPY --from=0 /go/bin/data /usr/local/bin/data-server
+COPY --from=0 /go/bin/data-server /usr/local/bin/data-server
 ARG SERVER_PORT=10000
 ENV PORT=${SERVER_PORT}
 ENTRYPOINT ["/usr/local/bin/data-server"]
