Add ulogd.conf file to ulogd image
Signed-off-by: Chris Telfer <ctelfer@docker.com>

--- a/ulogd/Dockerfile
+++ b/ulogd/Dockerfile
@@ -19,4 +19,5 @@ RUN cd ulogd2 && ./autogen.sh
 RUN cd ulogd2 && ./configure
 RUN cd ulogd2 && make
 RUN cd ulogd2 && make install
-ENTRYPOINT ["ulogd", "-d"]
+COPY ./ulogd.conf /usr/local/etc/ulogd.conf
+ENTRYPOINT ["ulogd", "-v"]
