Add automatic container name insertion into logs
Signed-off-by: Chris Telfer <ctelfer@docker.com>

--- a/ulogd/ulogd.conf
+++ b/ulogd/ulogd.conf
@@ -207,7 +207,7 @@ sync=1
 file="/var/log/ulogd_flow_events.json"
 timestamp=1
 # device name to be used in JSON message
-device="OVERRIDE ME"
+device="MYHOSTNAME"
 # If boolean_label is set to 1 then the numeric_label put on packet
 # by the input plugin is coding the action on packet: if 0, then
 # packet has been blocked and if non null it has been accepted.
