--- a/ulogd/Dockerfile
+++ b/ulogd/Dockerfile
@@ -20,4 +20,5 @@ RUN cd ulogd2 && ./configure
 RUN cd ulogd2 && make
 RUN cd ulogd2 && make install
 COPY ./ulogd.conf /usr/local/etc/ulogd.conf
-ENTRYPOINT ["ulogd", "-v"]
+COPY ./run.sh /usr/local/bin/run.sh
+ENTRYPOINT ["run.sh"]
