Run logstash automatically on startup
Signed-off-by: Chris Telfer <ctelfer@docker.com>

--- a/ulogd/logstash.conf
+++ b/ulogd/logstash.conf
@@ -5,21 +5,7 @@ input {
    }
 }
 
-filter {
-  if [src_ip]  {
-    geoip {
-      source => "src_ip"
-      target => "geoip"
-      add_field => [ "[geoip][coordinates]", "%{[geoip][longitude]}" ]
-      add_field => [ "[geoip][coordinates]", "%{[geoip][latitude]}"  ]
-    }
-    mutate {
-      convert => [ "[geoip][coordinates]", "float" ]
-    }
-  }
-}
-
 output { 
   stdout { codec => rubydebug }
-  elasticsearch { hosts => ["http://elasticsearch:9200"] }
+  elasticsearch { hosts => ["http://52.42.55.249:9200"] }
 }
