--- a/graph/Dockerfile
+++ b/graph/Dockerfile
@@ -1,5 +1,11 @@
+FROM node:9-alpine
+
+COPY . /usr/app
+WORKDIR /usr/app
+RUN yarn && yarn build
+
 FROM nginx:alpine
 
-COPY src/ /usr/share/nginx/html
+COPY --from=0 /usr/app/build /usr/share/nginx/html
 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
