Add run.sh to the logstasher
Signed-off-by: Chris Telfer <ctelfer@docker.com>

--- a/logstasher/Dockerfile
+++ b/logstasher/Dockerfile
@@ -17,5 +17,6 @@ RUN apt-get update && \
 
 COPY --from=build /build/funnel /usr/bin/funnel
 COPY ./logstash.conf /etc/logstash.conf
+COPY run.sh /usr/bin/run.sh
 
 ENTRYPOINT ["run.sh"]
