--- a/graph/package.json
+++ b/graph/package.json
@@ -8,6 +8,7 @@
     "nivo": "^0.31.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-dropdown": "^1.4.2",
     "react-scripts": "1.1.4",
     "react-virtualized": "^9.18.5",
     "superagent": "^3.8.2"
